# ticktick-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/plans/: parallel-percolating-sky.md
.github/workflows/: ci.yml  publish.yml
src/ticktick_mcp/: client.py  models.py  server.py
src/ticktick_mcp/resources/: lists.py  profile.py  settings.py
src/ticktick_mcp/tools/: calendar.py  filters.py  focus.py  folders.py  habits.py  tasks.py
tests/: conftest.py  test_auth.py  test_client.py  test_dates.py  test_resolve.py
tests/test_resources/: test_resources.py
tests/test_tools/: test_calendar.py  test_filters.py  test_focus.py  test_folders.py  test_habits.py  test_projects.py  test_tags.py  test_tasks.py
