[project]
name = "mcp-ticktick"
version = "0.2.0b1"
description = "MCP server for TickTick task management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Ali Karbassi" }]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-Levenshtein>=0.25",
]

[project.urls]
Homepage = "https://github.com/karbassi/ticktick-mcp"
Repository = "https://github.com/karbassi/ticktick-mcp"
Changelog = "https://github.com/karbassi/ticktick-mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/karbassi/ticktick-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
    "pyright>=1.1",
]

[project.scripts]
ticktick-mcp = "ticktick_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ticktick_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
